...
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTime">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="Editar" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Cancelar"
                    app:backgroundTint="@color/red" />
            </LinearLayout>
...
