<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="toolbar_navigation" type="id" />
</resources>